<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/png_background"
    tools:context=".HomeScreen">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/png_logo_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="@dimen/_50sdp"/>

    <Button
        android:id="@+id/btStartGame"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_100sdp"
        android:backgroundTint="#E406A7"
        android:text="@string/start_game"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <Button
        android:id="@+id/btSettings"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="wrap_content"
        android:backgroundTint="#1CDCE7"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btStartGame" />

    <Button
        android:id="@+id/btLeave"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btSettings"/>


</androidx.constraintlayout.widget.ConstraintLayout>